test/Common/LinkerScriptParsing/Errors/Assignments/MissingWhitespace/Inputs/script.t
MEMORY {
  RAM : ORIGIN =0x1000, LENGTH =0x1000
}

ADDITIONAL_INPUT1 = 0x600df00d;
ADDITIONAL_INPUT2=0x600df00d;
